[package]
name = "regexps"
version = "0.3.0"
authors = ["Hatim Muhammed", "marshallriemann@gmail.com"]
description = "A simple regular expressions library"
repository = "https://github.com/hatimmohammed369/rust-regexps"
publish = false
edition = "2021"
readme = "README.md"

[lib]
name = "regexps"
path = "src/lib.rs"
test = true
doctest = true
doc = true
crate-type = ["lib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
